update theme: fix navbar top whitespace

--- a/themes/minima/assets/css/minima.css
+++ b/themes/minima/assets/css/minima.css
@@ -477,7 +477,7 @@ table td {
 
 .site-nav {
   position: absolute;
-  top: 13px;
+  top: 16px;
   right: 15px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 5px;
@@ -573,7 +573,7 @@ table td {
   transition: transform 0.3s;
   position: fixed;
   width: 100%;
-  top: -72px;
+  top: -73px;
 }
 .nav-custom.hidden {
   -webkit-transform: translate3d(0, 0, 0);
@@ -621,7 +621,8 @@ table td {
 }
 
 .site-desc {
-  font-size: 1.3rem;
+  font-size: 1rem;
+  line-height: 1.2;
 }
 
 .p-name {
@@ -702,6 +703,7 @@ table td {
     font-size: 1.1rem;
     margin-top: 1.6rem;
     text-align: right;
+    line-height: 1.5;
   }
 }
 /**
